--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.0.0-rc.1",
+    "vue-router": "4.0.0-alpha.10"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "node-sass": "^4.14.1",
+    "sass": "^1.27.1",
+    "sass-loader": "^10.0.4",
+    "vite": "^1.0.0-rc.1"
   }
 }
